@@ -1,6 +1,7 @@
 Revision history for Math-Window2Viewport
 
 0.03    
+    - added github meta to makefile
     - added examples
 
 0.02    
